--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <menu class="header-menu">
             <ul>
                 <li class="menu-item">Home</li>
-                <li class="menu-item">About Us</li>
+                <li class="menu-item--active">About Us</li>
                 <li class="menu-item">Portfolio</li>
                 <li class="menu-item">Features</li>
                 <li class="menu-item">Blog</li>
@@ -79,6 +79,17 @@
                 </li>
             </ul>
         </menu>
+    </div>
+    <div class="header-container">
+        <div class="container-title">
+            <h2>Unique and Modern Design</h2>
+            <h1>Portfolio PSD Template</h1>
+            <p>Nam liber tempor cum soluta nobis eleifend option congue nihil imper- <br> diet doming id quod mazim placerat
+                facer possim assum.</p>
+        </div>
+        <div class="container-btn">
+            <button id="btn-started">GET STARTED</button>
+        </div>
     </div>
 </header>
 
