Сделал 4 оснвоных блока с анимацией.

--- a/index.html
+++ b/index.html
@@ -5,24 +5,22 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="shortcut icon" href="assets/image/logos.png" type="image/x-icon">
     <title>Waxom</title>
-
-
-    <!--    fonts   -->
     <link href="https://fonts.googleapis.com/css?family=Raleway:400,700&display=swap" rel="stylesheet">
-    <!--    =====   -->
 
-    <!--    bootstrap mb 4  -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.8.10/css/mdb.min.css" rel="stylesheet">
-    <!--    ===========     -->
 
-    <!--    my styles   -->
     <link rel="stylesheet" href="assets/css/index.css">
-    <!--   ==========   -->
-</head>
+    <link rel="stylesheet" media="all" href="assets/css/animate.css">
 
+    <script src="assets/js/wow.min.js"></script>
+    <script>
+        new WOW().init();
+    </script>
+</head>
 
 <body>
 <header>
@@ -84,14 +82,187 @@
         <div class="container-title">
             <h2>Unique and Modern Design</h2>
             <h1>Portfolio PSD Template</h1>
-            <p>Nam liber tempor cum soluta nobis eleifend option congue nihil imper- <br> diet doming id quod mazim placerat
+            <p>Nam liber tempor cum soluta nobis eleifend option congue nihil imper- <br> diet doming id quod mazim
+                placerat
                 facer possim assum.</p>
         </div>
         <div class="container-btn">
-            <button id="btn-started">GET STARTED</button>
+            <button class="bigBtn">GET STARTED</button>
         </div>
     </div>
 </header>
+
+<main>
+    <section class="services wow bounceInLeft" data-wow-duration="2s">
+        <div class="container">
+            <div class="row">
+                <div class="col-xs-12 col-sm-6 col-md-6 col-lg-3 service">
+                    <div class="image">
+                        <img src="assets/image/main/services/web.png" alt="">
+                    </div>
+                    <div class="title">
+                        <h3>Web & App Design</h3>
+                    </div>
+                    <div class="text">
+                        Nam liber tempor cum soluta nobis eleifend option congue nihil imperdiet doming id quod mazim.
+                    </div>
+                </div>
+                <div class="col-xs-12 col-sm-6 col-md-6 col-lg-3 service">
+                    <div class="image">
+                        <img src="assets/image/main/services/development.png" alt="">
+                    </div>
+                    <div class="title">
+                        <h3 style="color: #736357">Development</h3>
+                    </div>
+                    <div class="text">
+                        Nam liber tempor cum soluta nobis eleifend option congue nihil imperdiet doming id quod mazim.
+                    </div>
+                </div>
+                <div class="col-xs-12 col-sm-6 col-md-6 col-lg-3 service">
+                    <div class="image">
+                        <img src="assets/image/main/services/customizarion.png" alt="">
+                    </div>
+                    <div class="title">
+                        <h3>Customization</h3>
+                    </div>
+                    <div class="text">
+                        Nam liber tempor cum soluta nobis eleifend option congue nihil imperdiet doming id quod mazim.
+                    </div>
+                </div>
+                <div class="col-xs-12 col-sm-6 col-md-6 col-lg-3 service">
+                    <div class="image">
+                        <img src="assets/image/main/services/marketing.png" alt="">
+                    </div>
+                    <div class="title">
+                        <h3>Marketing</h3>
+                    </div>
+                    <div class="text">
+                        Nam liber tempor cum soluta nobis eleifend option congue nihil imperdiet doming id quod mazim.
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="photos wow rotateIn">
+        <div class="container">
+            <div class="row">
+                <div class="col-xs-12 photo">
+                    <div class="title">
+                        <h2>Waxom is Realization of your Ideas.</h2>
+                        <p>Investigationes demonstraverunt lectores legere me lius quod ii legunt saepius. Claritas est
+                            etiam processus dynamicus, qui sequitur mutationem consuetudium.</p>
+                    </div>
+                    <div class="card">
+                        <div class="card-container card1">
+                            <img src="assets/image/main/photo/photo1.png" alt="">
+                        </div>
+                        <div class="card-container card2">
+                            <img src="assets/image/main/photo/photo2.png" alt="">
+                        </div>
+                        <div class="card-container card3">
+                            <img src="assets/image/main/photo/photo3.png" alt="">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="boxes wow zoomIn">
+        <div class="container">
+            <div class="row">
+                <div class="col-xs-12 col-md-8 col-lg-8 boxes-desc">
+                    <h2><span>Waxom</span> Multipurpose WordPress Theme</h2>
+                    <p>Don't Forget to Rate the Template. Thanks so much!</p>
+                </div>
+                <div class="col-xs-12 col-md-4 col-lg-4 boxes-btn">
+                    <button class="bigBtn">Purchase now</button>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="project">
+        <div class="container">
+            <div class="row wow bounceInRight">
+                <div class="col-xs-12 col-md-12 col-lg-12 project-title">
+                    <h3>Our Last Project</h3>
+                    <p>
+                        nvestigationes demonstraverunt lectores legere me lius quod ii legunt saepius. Claritas est
+                        etiam processus dynamicus, qui sequitur mutationem consuetudium.
+                    </p>
+                </div>
+                <div class="col-xs-12 col-md-12 col-lg-12 btn-container">
+                    <button class="btn-project">All</button>
+                    <button class="btn-project">Web Design</button>
+                    <button class="btn-project">Mobile App</button>
+                    <button class="btn-project">Illustration</button>
+                    <button class="btn-project">Photography</button>
+                </div>
+            </div>
+            <div class="row project-gallery">
+                <div class="col-xs-12 col-md-4 col-lg-4 project-container wow bounceInLeft">
+                    <div class="project-photo">
+                        <img src="assets/image/main/project/bg1.jpg" alt="">
+                        <div class="noneblock"></div>
+                    </div>
+                    <div class="project-description">
+                        <h3>Claritas Etiam Processus</h3>
+                        <p>Photography. Neture</p>
+                    </div>
+                </div>
+                <div class="col-xs-12 col-md-4 col-lg-4 project-container wow bounceInUp">
+                    <div class="project-photo">
+                        <img src="assets/image/main/project/bg2.jpg" alt="">
+                    </div>
+                    <div class="project-description">
+                        <h3>Quam Nutamus Farum</h3>
+                        <p>Graphic Design, Mock-Up</p>
+                    </div>
+                </div>
+                <div class="col-xs-12 col-md-4 col-lg-4 project-container wow bounceInRight">
+                    <div class="project-photo">
+                        <img src="assets/image/main/project/bg3.jpg" alt="">
+                    </div>
+                    <div class="project-description">
+                        <h3>Usus Legentis Videntur</h3>
+                        <p>Photography. Holiday</p>
+                    </div>
+                </div>
+                <div class="col-xs-12 col-md-4 col-lg-4 project-container wow bounceInLeft">
+                    <div class="project-photo">
+                        <img src="assets/image/main/project/bg4.jpg" alt="">
+                    </div>
+                    <div class="project-description">
+                        <h3>Claritas Etiam Processus</h3>
+                        <p>Photography. Neture</p>
+                    </div>
+                </div>
+                <div class="col-xs-12 col-md-4 col-lg-4 project-container wow bounceInDown">
+                    <div class="project-photo">
+                        <img src="assets/image/main/project/bg5.jpg" alt="">
+                    </div>
+                    <div class="project-description">
+                        <h3>Quam Nutamus Farum</h3>
+                        <p>Graphic Design, Mock-Up</p>
+                    </div>
+                </div>
+                <div class="col-xs-12 col-md-4 col-lg-4 project-container wow bounceInRight">
+                    <div class="project-photo">
+                        <img src="assets/image/main/project/bg6.jpg" alt="">
+                    </div>
+                    <div class="project-description">
+                        <h3>Usus Legentis Videntur</h3>
+                        <p>Photography. Holiday</p>
+                    </div>
+                </div>
+            </div>
+            <div class="row bottom-button wow bounce">
+                <div class="col-xs-12 col-md-12 col-lg-12">
+                    <button class="bigBtn">Load More</button>
+                </div>
+            </div>
+        </div>
+    </section>
+</main>
 
 
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
@@ -100,3 +271,11 @@
         src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.min.js"></script>
 </body>
 </html>
+
+
+<!--<img src="assets/image/main/project/bg1.jpg" alt="">-->
+<!--<img src="assets/image/main/project/bg2.jpg" alt="">-->
+<!--<img src="assets/image/main/project/bg3.jpg" alt="">-->
+<!--<img src="assets/image/main/project/bg4.jpg" alt="">-->
+<!--<img src="assets/image/main/project/bg5.jpg" alt="">-->
+<!--<img src="assets/image/main/project/bg6.jpg" alt="">-->
