Полностью готовый сайт.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="shortcut icon" href="assets/image/logos.png" type="image/x-icon">
     <title>Waxom</title>
-    <link href="https://fonts.googleapis.com/css?family=Raleway:400,700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Raleway:400,600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet">
@@ -199,7 +200,7 @@
                 </div>
             </div>
             <div class="row project-gallery">
-                <div class="col-xs-12 col-md-4 col-lg-4 project-container wow bounceInLeft">
+                <div class="col-xs-12 col-md-6 col-lg-4 project-container wow bounceInLeft">
                     <div class="project-photo">
                         <img src="assets/image/main/project/bg1.jpg" alt="">
                         <div class="noneblock"></div>
@@ -209,7 +210,7 @@
                         <p>Photography. Neture</p>
                     </div>
                 </div>
-                <div class="col-xs-12 col-md-4 col-lg-4 project-container wow bounceInUp">
+                <div class="col-xs-12 col-md-6 col-lg-4 project-container wow bounceInUp">
                     <div class="project-photo">
                         <img src="assets/image/main/project/bg2.jpg" alt="">
                     </div>
@@ -218,7 +219,7 @@
                         <p>Graphic Design, Mock-Up</p>
                     </div>
                 </div>
-                <div class="col-xs-12 col-md-4 col-lg-4 project-container wow bounceInRight">
+                <div class="col-xs-12 col-md-6 col-lg-4 project-container wow bounceInRight">
                     <div class="project-photo">
                         <img src="assets/image/main/project/bg3.jpg" alt="">
                     </div>
@@ -227,7 +228,7 @@
                         <p>Photography. Holiday</p>
                     </div>
                 </div>
-                <div class="col-xs-12 col-md-4 col-lg-4 project-container wow bounceInLeft">
+                <div class="col-xs-12 col-md-6 col-lg-4 project-container wow bounceInLeft">
                     <div class="project-photo">
                         <img src="assets/image/main/project/bg4.jpg" alt="">
                     </div>
@@ -236,7 +237,7 @@
                         <p>Photography. Neture</p>
                     </div>
                 </div>
-                <div class="col-xs-12 col-md-4 col-lg-4 project-container wow bounceInDown">
+                <div class="col-xs-12 col-md-6 col-lg-4 project-container wow bounceInDown">
                     <div class="project-photo">
                         <img src="assets/image/main/project/bg5.jpg" alt="">
                     </div>
@@ -245,7 +246,7 @@
                         <p>Graphic Design, Mock-Up</p>
                     </div>
                 </div>
-                <div class="col-xs-12 col-md-4 col-lg-4 project-container wow bounceInRight">
+                <div class="col-xs-12 col-md-6 col-lg-4 project-container wow bounceInRight">
                     <div class="project-photo">
                         <img src="assets/image/main/project/bg6.jpg" alt="">
                     </div>
@@ -262,7 +263,200 @@
             </div>
         </div>
     </section>
+    <section class="video wow rollIn">
+        <div class="video-container">
+            <img src="assets/image/main/video/photo.jpg" alt="">
+        </div>
+        <div class="video-bg">
+            <div class="container">
+                <div class="row">
+                    <div class="col-xs-12 col-md-12 col-lg-12">
+                        <div class="circle">
+                            <img src="assets/image/main/video/icon-play.png" alt="">
+                        </div>
+                        <div class="text-container">
+                            <h3>Waxom Video Presentation</h3>
+                            <p>Investigationes demonstraverunt lectores legere me lius quod ii legunt saepius, qui
+                                sequitur mutationem consuetudium.</p>
+                            <span>03:26</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="mobdevice wow rubberBand">
+        <div class="container ">
+            <div class="row">
+                <div class="col-xs-12 col-md-6 col-lg-4 container-photo">
+                    <img src="assets/image/main/mobdevice/photo.png" alt="">
+                </div>
+                <div class="col-xs-12 col-md-6 col-lg-8 container-description">
+                    <h2>Excellent for Mobile Devices.</h2>
+                    <p>Qisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut
+                        aliquip ex ea commodo consequat. Investigationes demonstraverunt lectores legere me lius quod ii
+                        legunt saepius claritas. Eodem modo typi, qui nunc nobis videntur parum clari, fiant sollemnes
+                        in futurum.</p>
+                    <ul class="mob-list">
+                        <li class="list-item"><img src="assets/image/main/mobdevice/01.png" alt="">Nam liber tempor cum
+                            soluta nobis eleifend option;
+                        </li>
+                        <li class="list-item"><img src="assets/image/main/mobdevice/01.png" alt="">Option congue nihil
+                            imperdiet doming id quod mazim placerat facer;
+                        </li>
+                        <li class="list-item"><img src="assets/image/main/mobdevice/01.png" alt="">Eodem modo typi, qui
+                            nunc nobis videntur parum futurum;
+                        </li>
+                        <li class="list-item"><img src="assets/image/main/mobdevice/01.png" alt="">Investigationes
+                            demonstraverunt lectores
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="counters wow bounceInRight" data-wow-duration="2s">
+        <div class="container">
+            <div class="row">
+                <div class="col-xs-12 col-sm-6 col-md-6 col-lg-2 container-item">
+                    <img src="assets/image/main/counters/people-icon.png" alt="">
+                    <h2>3587</h2>
+                    <span>satisfied</span>
+                    <div class="block"></div>
+                </div>
+                <div class="col-xs-12 col-sm-6 col-md-6 col-lg-2 container-item">
+                    <img src="assets/image/main/counters/coffee-icon.png" alt="">
+                    <h2>207</h2>
+                    <span>cups of coffee</span>
+                    <div class="block"></div>
+                </div>
+                <div class="col-xs-12 col-sm-6 col-md-6 col-lg-2 container-item">
+                    <img src="assets/image/main/counters/chat-icon.png" alt="">
+                    <h2>2500</h2>
+                    <span>blog posts</span>
+                    <div class="block"></div>
+                </div>
+                <div class="col-xs-12 col-sm-6 col-md-6 col-lg-2 container-item">
+                    <img src="assets/image/main/counters/heart-icon.png" alt="">
+                    <h2>873</h2>
+                    <span>likes</span>
+                    <div class="block"></div>
+                </div>
+                <div class="col-xs-12 col-sm-6 col-md-6 col-lg-2 container-item">
+                    <img src="assets/image/main/counters/people-icon.png" alt="">
+                    <h2>900</h2>
+                    <span>we launched</span>
+                    <div class="block"></div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="partners wow heartBeat">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-xs-12 partners-image">
+                    <img src="assets/image/main/parthnes/bg.jpg" alt="">
+                </div>
+                <div class="col-xs-12 partners-logo">
+                    <div class="partners-container">
+                        <div class="partners-item">
+                            <img src="assets/image/main/parthnes/logo1.png" alt="">
+                        </div>
+                        <div class="partners-item">
+                            <img src="assets/image/main/parthnes/logo2.png" alt="">
+                        </div>
+                        <div class="partners-item">
+                            <img src="assets/image/main/parthnes/logo3.png" alt="">
+                        </div>
+                        <div class="partners-item">
+                            <img src="assets/image/main/parthnes/logo4.png" alt="">
+                        </div>
+                    </div>
+                </div>
+                <div class="partners-bg"></div>
+            </div>
+        </div>
+    </section>
 </main>
+
+
+<footer>
+    <div class="container-fluid footer-top wow swing">
+        <div class="row">
+            <div class="col-xs-12 col-sm-6 col-md-6 col-lg-3 top-item">
+                <h2 style="font-size: 34px; color: #fff;"><img src="assets/image/header/logos.png" alt=""> Waxom</h2>
+                <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut
+                    laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci
+                    suscipit lobortis claritatem.</p>
+                <br>
+                <p style="color: #D1D1D1; font-size: 16px; font-weight: bold">Read more <img
+                        src="assets/image/main/arrow.png" alt="" style="margin-left: 12px"></p>
+            </div>
+            <div class="col-xs-12 col-sm-6 col-md-6 col-lg-3 top-item">
+                <div>
+                    <h2 class="footer-title">Recent Posts</h2>
+                    <span>September 08. 2015</span>
+                    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit</p>
+                </div>
+                <div>
+                    <span style="color: #fff;">September 08. 2015</span>
+                    <p style="color: #C7B299">Diam nonummy nibh euismod tincidunt ut laoreet dolore magna</p>
+                </div>
+                <div>
+                    <span>September 08. 2015</span>
+                    <p>Claritas est etiam processus dynamicus, qui sequitur mutationem per seacula quarta decima</p>
+                </div>
+            </div>
+            <div class="col-xs-12 col-sm-6 col-md-6 col-lg-3 top-item">
+                <div>
+                    <h2 class="footer-title">Our Twitter</h2>
+                    <p><span style="color: #069DC8; font-size: 15px;">@waxom</span> Cum soluta nobis eleifend option
+                        congue nihil imperdiet doming</p>
+                    <span>3 mins ago</span>
+                </div>
+                <div>
+                    <p>Mirum est <span style="color: #069DC8; font-size: 15px;">#envato</span> notare quam littera
+                        gothica, quam nunc putamus parum anteposuerit
+                        litterarum</p>
+                    <span>5 hour ago</span>
+                </div>
+                <div>
+                    <p>Soluta nobis option bit.ly/1Hniso7</p>
+                    <span>20 days ago</span>
+                </div>
+            </div>
+            <div class="col-xs-12 col-sm-6 col-md-6 col-lg-3 top-item">
+                <h2 class="footer-title">Dribbble Widget</h2>
+                <div class="container">
+                    <div class="row">
+                        <div class="col-xs-6 block">
+                            <img src="assets/image/footer/img1.png" alt="">
+                        </div>
+                        <div class="col-xs-6 block">
+                            <img src="assets/image/footer/img2.png" alt="">
+                        </div>
+                        <div class="col-xs-6 block">
+                            <img src="assets/image/footer/img3.png" alt="">
+                        </div>
+                        <div class="col-xs-6 block">
+                            <img src="assets/image/footer/img4.png" alt="">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="container-fluid footer-bottom wow heartBeat">
+        <div class="container">
+            <div class="row">
+                <div class="col-xs-12 col-sm-6">
+                   <p> Copyright &copy; 2015 <span style="color: #959595">Waxom</span> | Privacy Police | <span style="color: #C7B299;">FAQ</span> | Support</p>
+                </div>
+                <div class="col-xs-12 col-sm-6"></div>
+            </div>
+        </div>
+    </div>
+</footer>
 
 
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
@@ -271,11 +465,3 @@
         src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.min.js"></script>
 </body>
 </html>
-
-
-<!--<img src="assets/image/main/project/bg1.jpg" alt="">-->
-<!--<img src="assets/image/main/project/bg2.jpg" alt="">-->
-<!--<img src="assets/image/main/project/bg3.jpg" alt="">-->
-<!--<img src="assets/image/main/project/bg4.jpg" alt="">-->
-<!--<img src="assets/image/main/project/bg5.jpg" alt="">-->
-<!--<img src="assets/image/main/project/bg6.jpg" alt="">-->
