Выполнил адаптив для телефона и планшета.

--- a/index.html
+++ b/index.html
@@ -10,13 +10,23 @@
     <link href="https://fonts.googleapis.com/css?family=Raleway:400,600&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400&display=swap" rel="stylesheet">
 
+
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.8.10/css/mdb.min.css" rel="stylesheet">
 
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script type="text/javascript"
+            src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.4/umd/popper.min.js"></script>
+    <script type="text/javascript"
+            src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.min.js"></script>
+    <script type="text/javascript"
+            src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.8.10/js/mdb.min.js"></script>
+
     <link rel="stylesheet" href="assets/css/index.css">
     <link rel="stylesheet" media="all" href="assets/css/animate.css">
 
+    <script type="text/javascript" src="assets/js/main.js"></script>
     <script src="assets/js/wow.min.js"></script>
     <script>
         new WOW().init();
@@ -60,25 +70,35 @@
             <img src="assets/image/header/logos.png" alt="">
             <h2>Waxom</h2>
         </div>
-        <menu class="header-menu">
-            <ul>
-                <li class="menu-item">Home</li>
-                <li class="menu-item--active">About Us</li>
-                <li class="menu-item">Portfolio</li>
-                <li class="menu-item">Features</li>
-                <li class="menu-item">Blog</li>
-                <li class="menu-item">Pricing</li>
-                <li class="menu-item">Shortcodes</li>
-                <li class="menu-item">Contact</li>
-                <li class="menu-item">
-                    <img src="assets/image/header/bag.png" alt="">
-                </li>
-                <li class="menu-item">
-                    <img src="assets/image/header/loop.png" alt="">
-                </li>
-            </ul>
-        </menu>
+
+        <nav class="navbar navbar-expand-md">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#topMenu">
+                <span class="navbar-toggler-icon"></span>
+                <span class="navbar-toggler-icon" style="margin-top: -20px"></span>
+                <span class="navbar-toggler-icon" style="margin-top: -40px"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="topMenu">
+                <ul class="navbar-nav">
+                    <li class="menu-item">Home</li>
+                    <li class="menu-item">About Us</li>
+                    <li class="menu-item">Portfolio</li>
+                    <li class="menu-item">Features</li>
+                    <li class="menu-item">Blog</li>
+                    <li class="menu-item">Pricing</li>
+                    <li class="menu-item">Shortcodes</li>
+                    <li class="menu-item">Contact</li>
+                    <li class="menu-item">
+                        <img src="assets/image/header/bag.png" alt="">
+                    </li>
+                    <li class="menu-item">
+                        <img src="assets/image/header/loop.png" alt="">
+                    </li>
+                </ul>
+            </div>
+        </nav>
     </div>
+
+
     <div class="header-container">
         <div class="container-title">
             <h2>Unique and Modern Design</h2>
@@ -450,18 +470,13 @@
         <div class="container">
             <div class="row">
                 <div class="col-xs-12 col-sm-6">
-                   <p> Copyright &copy; 2015 <span style="color: #959595">Waxom</span> | Privacy Police | <span style="color: #C7B299;">FAQ</span> | Support</p>
+                    <p> Copyright &copy; 2015 <span style="color: #959595">Waxom</span> | Privacy Police | <span
+                            style="color: #C7B299;">FAQ</span> | Support</p>
                 </div>
                 <div class="col-xs-12 col-sm-6"></div>
             </div>
         </div>
     </div>
 </footer>
-
-
-<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.4/umd/popper.min.js"></script>
-<script type="text/javascript"
-        src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.min.js"></script>
 </body>
 </html>
